clang/test/CIR/IR/invalid-tls.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!s32i = !cir.int<s, 32>

module {
  cir.global "private" external @non_tls : !s32i
  cir.func @error() {
    // expected-error@+1 {{access to global not marked thread local}}
    %0 = cir.get_global thread_local @non_tls : !cir.ptr<!s32i>
    cir.return
  }
}

// -----

!s32i = !cir.int<s, 32>

module {
  // expected-error@+1{{op cannot have both static local and dynamic tls references}}
cir.global "private" internal tls_dyn dyn_tls_refs = <"asdf", "asdf", "asdf"> static_local_guard<"asdf"> @_ZZ1fvE1y : !s32i
}

// -----

!s32i = !cir.int<s, 32>

module {
  // expected-error@+1{{'dyn_tls_refs' only valid for dynamic tls}}
cir.global "private" internal tls_local_dyn dyn_tls_refs = <"asdf", "asdf", "asdf"> @_ZZ1fvE1y : !s32i
}

